{
  "version": 4,
  "terraform_version": "0.12.21",
  "serial": 4,
  "lineage": "14f73354-f540-4dc6-1621-31b88eed23d8",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:560395879688:vpc/vpc-0c0efd6a",
            "cidr_block": "10.224.64.0/20",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-74ed081c",
                "cidr_block": "10.224.64.0/20",
                "state": "associated"
              },
              {
                "association_id": "vpc-cidr-assoc-8fc775e2",
                "cidr_block": "10.217.13.0/24",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-00df671d349026d10",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "MedicalTransactions"
                ]
              }
            ],
            "id": "vpc-0c0efd6a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-bda989db",
            "owner_id": "560395879688",
            "state": "available",
            "tags": {
              "Billing": "BillingValue",
              "Description": "DescriptionValue",
              "Name": "MedicalTransactions",
              "Tier": "MedicalTransactions"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:560395879688:security-group/sg-0959348a5544cd457",
            "description": "Allow inbound traffic from Security Groups and CIDRs. Allow all outbound traffic",
            "egress": [],
            "id": "sg-0959348a5544cd457",
            "ingress": [],
            "name": "--20200414164826588600000001",
            "name_prefix": "--",
            "owner_id": "560395879688",
            "revoke_rules_on_delete": false,
            "tags": {
              "APP_ID": "1552",
              "BUSINESS_DOMAIN": "metricsdashboard",
              "COST_CENTER": "40153",
              "STAGE": "",
              "TEAM": "imncore"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c0efd6a"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress traffic",
            "from_port": 0,
            "id": "sgrule-3419769700",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0959348a5544cd457",
            "self": false,
            "source_security_group_id": null,
            "to_port": 65535,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_cidr_blocks",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_security_groups",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    }
  ]
}